chore:fixed form alignment

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -14,3 +14,11 @@ body {
     line-height: 22px;
     letter-spacing: 0.14px;
 }
+
+.h-full{
+    height: 100%;
+}
+
+.w-full{
+    width: 100%;
+}
